# landing-page

./: .gitignore  .prettierignore  Cargo.toml  Dockerfile
.github/workflows/: main.yaml  main.yml
i18n/: en.json  es.json
i18n/common/: en.json  es.json
i18n/index/: en.json  es.json
i18n/policy/: en.json  es.json
i18n/terms/: en.json  es.json
src/: i18n.rs  main.rs
src/.github/workflows/: ci.yaml
src/controllers/: about.rs  blog.rs  health.rs  index.rs  mod.rs  policy.rs  terms.rs
static/css/: style-azure.css  style-lungwort.css
static/js/: jquery.bundle.js  toastr.examples.js
templates/: base.html
templates/components/body/complete/: feature1.html  feature2.html  feature3.html  feature4.html
templates/components/body/others/: app.html  banner.html  cards_with_redirect.html  contact.html  documents.html  faqs.html  features.html  four_grill.html  partners.html  ratings.html  roadmap.html  team.html  tokenSale.html  token_sale.html  whatIs.html
templates/components/common/: footer.html  header.html
templates/components/header/: banner.html  main.html
templates/components/policy/: content.html
templates/components/terms/: content.html
templates/pages/: index.html  policy.html  terms.html
