[package]
name = "landing_tuvotodecide"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
tera = "1.20.0"
i18n-embed      = { version = "0.25", features = ["fluent-system"] }
i18n-embed-fl   = "0.25"
fluent-bundle   = "0.15"
unic-langid     = "0.9"
once_cell       = "1"
cookie          = "0.18"
time            = "0.3"