[package]
name = "landing_tuvotodecide"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
tera = "1.20.0"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
once_cell     = "1.19"         
accept-language = "3.0" 
walkdir = "2.5.0"
